# scholar-ai

./: .gitignore  package-lock.json  package.json  vitest.config.ts
ai-service/: chat_service.py  main.py  models.py  provider_service.py  pyproject.toml  pytest.ini
ai-service/routers/: chat.py  providers.py
ai-service/tests/: test_chat.py  test_models.py  test_provider_service.py
openspec/changes/02-phase-ai-providers/: design.md  exploration.md  proposal.md  spec.md  tasks.md
src/: App.tsx  Sidebar.tsx  index.css  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai_bridge/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs  models.rs
src-tauri/src/db/: mod.rs
src-tauri/tests/: tauri_commands.rs
src/hooks/: useAI.ts
src/pages/: ConfigPage.tsx  DashboardPage.tsx  ReportsPage.tsx  SearchPage.tsx
src/pages/__tests__/: ConfigPage.test.tsx
src/stores/: providers.ts
